istio-argocd/Gateway-Argocd.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
spec:
  selector:
    istio: ingressgateway  # 사용할 Istio 인그레스 게이트웨이
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    # tls:
    #   httpsRedirect: true 
    hosts:
    - "argocd.srrain.store"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "argocd.srrain.store"
    tls:
      mode: SIMPLE
      credentialName: argocd-tls-secret
