istio-argocd/VirtualService_argocd.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
spec:
  hosts:
  - "argocd.srrain.store"
  gateways:
  - argocd-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
  - match:
    - port: 443
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80  # HTTPS 요청을 HTTP로 라우팅
